--- a/RapBattle/app/src/main/res/layout/recycleview_record_item.xml
+++ b/RapBattle/app/src/main/res/layout/recycleview_record_item.xml
@@ -20,12 +20,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_feed_top" />-->
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <TextView
             android:id="@+id/ivUserProfile"
             android:text="100Lv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
+        </LinearLayout>
         <org.ccccoder.rapbattle.CustomView.SquaredFrameLayout
             android:id="@+id/vImageRoot"
             android:layout_width="match_parent"
