--- a/RapBattle/app/src/main/res/layout/app_bar_main.xml
+++ b/RapBattle/app/src/main/res/layout/app_bar_main.xml
@@ -36,11 +36,12 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
+        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        android:src="@drawable/fab_add_white" />
 
 </android.support.design.widget.CoordinatorLayout>
 
