--- a/RapBattle/app/src/main/res/layout/recycleview_record_item.xml
+++ b/RapBattle/app/src/main/res/layout/recycleview_record_item.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_margin="8dp"
+    android:layout_margin="2dp"
     card_view:cardCornerRadius="4dp">
 
     <LinearLayout
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_feed_top" />-->
 
-        <LinearLayout
+        <RelativeLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -29,9 +29,17 @@
             android:id="@+id/ivUserProfile"
             android:text="100Lv"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/btnPlay" />
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/btnPlay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:src="@drawable/ic_play_white"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true" />
+        </RelativeLayout>
         <org.ccccoder.rapbattle.CustomView.SquaredFrameLayout
             android:id="@+id/vImageRoot"
             android:layout_width="match_parent"
