--- a/RapBattle/app/src/main/res/menu/drawer_menu.xml
+++ b/RapBattle/app/src/main/res/menu/drawer_menu.xml
@@ -3,28 +3,33 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="My Rap Page" />
+            android:id="@+id/make_rap"
+            android:icon="@drawable/ic_record_black"
+            android:title="랩 만들기" />
+
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Rap View" />
+            android:id="@+id/my_rap"
+            android:icon="@drawable/ic_play_black"
+            android:title="나의 랩 모음" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/title_list"
+            android:icon="@drawable/ic_titlelist_black"
+            android:title="주제 모음" />
+        <item
+            android:id="@+id/bit_list"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Rap Tournament" />
+            android:title="비트 모음" />
+        <item
+            android:id="@+id/hot_list"
+            android:icon="@drawable/ic_star_black"
+            android:title="HOT 리스트" />
     </group>
 
-    <item android:title="My Page">
+    <item android:title="Configuration">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/icon_menu_search"
-                android:title="Search" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
+                android:id="@+id/setting"
+                android:icon="@drawable/ic_settings_black"
                 android:title="Setting" />
         </menu>
     </item>
