--- a/RapBattle/app/src/main/res/layout/recycleview_record_item.xml
+++ b/RapBattle/app/src/main/res/layout/recycleview_record_item.xml
@@ -26,19 +26,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         <TextView
+            android:layout_margin="10dp"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
             android:id="@+id/ivUserProfile"
             android:text="100Lv"
+            android:background="@drawable/roundcorner"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/btnPlay" />
+            android:layout_height="wrap_content" />
+            <!--
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/btnPlay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="right"
                 android:src="@drawable/ic_play_white"
                 android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignParentEnd="true" />-->
         </RelativeLayout>
         <org.ccccoder.rapbattle.CustomView.SquaredFrameLayout
             android:id="@+id/vImageRoot"
