--- a/RapBattle/app/src/main/res/layout/recycleview_record_item.xml
+++ b/RapBattle/app/src/main/res/layout/recycleview_record_item.xml
@@ -21,12 +21,12 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_feed_top" />-->
 
-        <RelativeLayout
+        <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         <TextView
-            android:layout_margin="10dp"
+            android:layout_margin="15dp"
             android:textStyle="bold"
             android:textColor="#ffffff"
             android:id="@+id/ivUserProfile"
@@ -34,6 +34,17 @@
             android:background="@drawable/roundcorner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+            <TextView
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimaryDark"
+                android:id="@+id/ivUserId"
+                android:text="선웅선웅"
+                android:layout_gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
             <!--
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/btnPlay"
@@ -42,7 +53,7 @@
                 android:src="@drawable/ic_play_white"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true" />-->
-        </RelativeLayout>
+        </LinearLayout>
         <org.ccccoder.rapbattle.CustomView.SquaredFrameLayout
             android:id="@+id/vImageRoot"
             android:layout_width="match_parent"
