--- a/RapBattle/app/src/main/res/layout/recycleview_record_item.xml
+++ b/RapBattle/app/src/main/res/layout/recycleview_record_item.xml
@@ -7,8 +7,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_margin="2dp"
-    card_view:cardCornerRadius="4dp">
+    android:layout_marginBottom="8dp"
+    card_view:cardCornerRadius="4dp"
+    card_view:cardElevation="2dp"
+    card_view:cardUseCompatPadding="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,14 +28,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         <TextView
-            android:layout_margin="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="8dp"
             android:textStyle="bold"
             android:textColor="#ffffff"
             android:id="@+id/ivUserProfile"
-            android:text="100Lv"
+            android:text="1000"
             android:background="@drawable/roundcorner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
             <TextView
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
@@ -70,13 +76,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
                 <TextView
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp"
                     android:id="@+id/ivFeedCenter"
                     android:text="두리번 두리번\n누가 내 삶 가져갔어\n전부 도둑놈 같아\n매일 들이닥치는 자연재해\n난 손도 못 쓰고 당해\n일 더하고 일해 \nBut they call me \n 귀요미 Thang\n내 랩이 어쩌고 저쩌고\n나불대네 고맙다"
                     android:gravity="center"
                     android:lineSpacingExtra="15dip"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_heart_outline_white"
                     android:visibility="visible" />
 </ScrollView>
             <View
@@ -95,8 +102,12 @@
                 android:src="@drawable/ic_heart_outline_white"
                 android:visibility="invisible" />
         </org.ccccoder.rapbattle.CustomView.SquaredFrameLayout>
+<View
+    android:layout_width="match_parent"
+    android:layout_height="1dp"
+    android:background="#dddddd"/>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="8dp"
@@ -104,60 +115,72 @@
 
             <ImageButton
                 android:id="@+id/btnLike"
-                android:scaleType="centerInside"
-                android:padding="10dp"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
                 android:background="@android:color/transparent"
+                android:layout_centerHorizontal="true"
+                android:padding="10dp"
+                android:scaleType="centerInside"
                 android:src="@drawable/ic_heart_outline_grey" />
 
-            <ImageButton
-                android:scaleType="centerInside"
-                android:id="@+id/btnMore"
-                android:padding="10dp"
-                android:layout_width="48dp"
+
+            <Button
+                android:id="@+id/play"
+                android:layout_alignBottom="@id/btnLike"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+                android:textColor="#ffffff"
+                android:text="Play"
+                android:theme="@style/MyButton" />
+<LinearLayout
+    android:orientation="horizontal"
+    android:layout_alignBottom="@id/btnLike"
+    android:layout_alignParentEnd="true"
+    android:layout_alignParentTop="true"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/small_heart"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
                 android:layout_height="48dp"
-                android:background="@drawable/btn_feed_action"
-                android:src="@drawable/ic_more_grey" />
+                android:gravity="center"
+                android:text="#"
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center_vertical|right">
-
-                <ImageView
-                    android:layout_gravity="end|center_vertical"
-                    android:scaleType="centerInside"
-                    android:paddingLeft="15dp"
-                    android:paddingBottom="15dp"
-                    android:paddingTop="15dp"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:src="@drawable/ic_heart_small_blue" />
-
-                <TextSwitcher
-                    android:id="@+id/tsLikesCounter"
+            <TextSwitcher
+                android:id="@+id/tsLikesCounter"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="8dp"
+                android:inAnimation="@anim/slide_in_likes_counter"
+                android:outAnimation="@anim/slide_out_likes_counter">
+                <TextView
+                    android:id="@+id/textView4"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:inAnimation="@anim/slide_in_likes_counter"
-                    android:outAnimation="@anim/slide_out_likes_counter">
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="123 likes"
+                    android:textColor="@color/text_like_counter" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="123 likes"
-                        android:textColor="@color/text_like_counter" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:textColor="@color/text_like_counter" />
+            </TextSwitcher>
+</LinearLayout>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/text_like_counter" />
-                </TextSwitcher>
-            </LinearLayout>
-        </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
