--- a/RapBattle/app/src/main/res/values/styles.xml
+++ b/RapBattle/app/src/main/res/values/styles.xml
@@ -1,5 +1,10 @@
 <resources>
 
+    <!--버튼스타일-->
+    <style name="MyButton" parent="Theme.AppCompat.Light">
+        <item name="colorControlHighlight">#FFC0CB</item>
+        <item name="colorButtonNormal">#FF4081</item>
+    </style>
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
