--- a/RapBattle/app/src/main/res/layout/app_bar_main.xml
+++ b/RapBattle/app/src/main/res/layout/app_bar_main.xml
@@ -27,7 +27,7 @@
                 android:layout_marginRight="5dp"
                 android:layout_marginEnd="5dp"
                 android:scaleType="centerInside"
-                android:src="@drawable/toolbar_logo" />
+                android:src="@drawable/logo" />
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
