--- a/RapBattle/app/src/main/res/layout/drawer_menu_header.xml
+++ b/RapBattle/app/src/main/res/layout/drawer_menu_header.xml
@@ -14,14 +14,21 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <ImageView
-        android:id="@+id/menu_level_imageView"
+    <Button
+        android:id="@+id/play"
+        android:layout_gravity="center"
         android:layout_width="44dp"
         android:layout_height="44dp"
-        android:src="@drawable/level1" />
+        android:background="@drawable/circle_button"
+        android:gravity="center"
+        android:layout_margin="20dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:text="Lv.1"
+        android:textColor="#fff" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/user_name_tv"
         android:gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
