--- a/RapBattle/app/src/main/res/layout/recycleview_record_item.xml
+++ b/RapBattle/app/src/main/res/layout/recycleview_record_item.xml
@@ -35,7 +35,7 @@
             android:textStyle="bold"
             android:textColor="#ffffff"
             android:id="@+id/ivUserProfile"
-            android:text="1000"
+            android:text="Lv.1"
             android:background="@drawable/roundcorner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -76,8 +76,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
                 <TextView
-                    android:paddingStart="10dp"
-                    android:paddingEnd="10dp"
+                    android:paddingStart="50dp"
+                    android:scrollbars="vertical"
+                    android:paddingEnd="50dp"
                     android:id="@+id/ivFeedCenter"
                     android:text="두리번 두리번\n누가 내 삶 가져갔어\n전부 도둑놈 같아\n매일 들이닥치는 자연재해\n난 손도 못 쓰고 당해\n일 더하고 일해 \nBut they call me \n 귀요미 Thang\n내 랩이 어쩌고 저쩌고\n나불대네 고맙다"
                     android:gravity="center"
