--- a/RapBattle/app/src/main/res/layout/recycleview_title_item.xml
+++ b/RapBattle/app/src/main/res/layout/recycleview_title_item.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_marginBottom="8dp"
+    card_view:cardCornerRadius="4dp"
+    card_view:cardElevation="2dp"
+    card_view:cardUseCompatPadding="true">
+
+<LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
+    android:layout_height="match_parent">
                 <TextView
                 android:id="@+id/titlename"
                 android:layout_width="wrap_content"
@@ -13,11 +23,24 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginStart="10dp"
-                android:paddingBottom="20dp"
-                android:paddingTop="20dp"
+                android:paddingBottom="2dp"
+                android:paddingTop="10dp"
                 android:layout_gravity="center"
                 android:text="소나무"
                 android:textSize="25sp"
                 android:textStyle="bold" />
-
+    <TextView
+        android:id="@+id/count_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginStart="10dp"
+        android:paddingBottom="10dp"
+        android:layout_gravity="center"
+        android:text="112곡"
+        android:textSize="12sp" />
 </LinearLayout>
+
+</android.support.v7.widget.CardView>
